svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: strapi
  namespace: strapi
spec:
  selector:
    app.kubernetes.io/name: strapi
  ports:
  - name: http
    port: 1337
    targetPort: 1337
    protocol: TCP
  type: ClusterIP
