strapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: strapi-public
  namespace: strapi
  annotations:
    nginx.ingress.kubernetes.io/rate-limit: "300"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
  - host: your-domain.com
    http:
      paths:
      - backend:
          service:
            name: strapi
            port:
              number: 1337
        path: /
        pathType: Prefix
