strapi-private-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: strapi-private
  namespace: strapi
spec:
  ingressClassName: nginx
  rules:
  - host: private.your-domain.com
    http:
      paths:
      - backend:
          service:
            name: strapi
            port:
              number: 1337
        path: /
        pathType: Prefix
